testdata/golden/sema/invalid/entrypoint/return_no_exit_code.fmt
// Test: @entrypoint returning custom type without __to(int) is invalid
// Expected: SEM3123

type MyType = {
    value: int,
};

@entrypoint
fn main() -> MyType {
    return MyType { value: 42 };
}
